testcases/error-cases/union-error-01/error.txt
error[E0005]: unexpected token
 --> testcases\error-cases\union-error-01\input.canon:1:15
  |
1 | union MyUnion string | int
  |               ^
2 | 
  |
  = note: missing '=' at 'string'
  = note: found unexpected token
  = help: check the syntax around this location